// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionRow available languages should render the names of the available languages below the version for a multilingual model 1`] = `
<div
  class="MuiBox-root css-ynpy0w"
  data-testid="version-row-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
>
  <div
    class="MuiBox-root css-krlm2"
  >
    <div
      class="MuiBox-root css-1vz7s72"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1lrhyxp-MuiTypography-root"
        data-testid="version-text-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      >
        v1.0.0
      </p>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-2vj4nz-MuiChip-root"
        data-testid="latest-chip-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-t3ycia-MuiChip-label"
        >
          latest
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ywqyda-MuiChip-root"
        data-testid="locale-chip-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-t3ycia-MuiChip-label"
        >
          ZA
        </span>
      </div>
    </div>
    <div
      class="MuiTypography-root MuiTypography-body2 css-jzw8nk-MuiTypography-root"
      data-testid="available-languages-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1kh6sg7-MuiSvgIcon-root"
        data-testid="available-languages-icon-ca1f70b2-a487-4d07-b49d-22ce6e282759"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
        />
        <title>
          Languages
        </title>
      </svg>
      <span>
        <span
          class="MuiBox-root css-0"
          data-testid="available-languages-names-ca1f70b2-a487-4d07-b49d-22ce6e282759"
        >
          English, Amharic, French
        </span>
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-mebn01"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-14w93u9-MuiButtonBase-root-MuiButton-root"
      data-testid="explore-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      tabindex="0"
      type="button"
    >
      Explore
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-10gmsyr-MuiButtonBase-root-MuiButton-root"
      data-testid="api-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="CodeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.4 16.6 4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0 4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
          />
        </svg>
      </span>
      API
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <a
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-10gmsyr-MuiButtonBase-root-MuiButton-root"
      data-testid="csv-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      download="model-1.csv.zip"
      href="https://download.example.com/model-1.csv.zip"
      tabindex="0"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="FileDownloadIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
          />
        </svg>
      </span>
      CSV
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-10gmsyr-MuiButtonBase-root-MuiButton-root"
      data-testid="show-details-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="DescriptionOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 16h8v2H8zm0-4h8v2H8zm6-10H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </span>
      Details
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`VersionRow should render the version row with all the common elements 1`] = `
<div
  class="MuiBox-root css-ynpy0w"
  data-testid="version-row-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
>
  <div
    class="MuiBox-root css-krlm2"
  >
    <div
      class="MuiBox-root css-1vz7s72"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1lrhyxp-MuiTypography-root"
        data-testid="version-text-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      >
        v1.0.0
      </p>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-2vj4nz-MuiChip-root"
        data-testid="latest-chip-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-t3ycia-MuiChip-label"
        >
          latest
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ywqyda-MuiChip-root"
        data-testid="locale-chip-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-t3ycia-MuiChip-label"
        >
          ZA
        </span>
      </div>
    </div>
    <div
      class="MuiTypography-root MuiTypography-body2 css-jzw8nk-MuiTypography-root"
      data-testid="available-languages-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1kh6sg7-MuiSvgIcon-root"
        data-testid="available-languages-icon-ca1f70b2-a487-4d07-b49d-22ce6e282759"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
        />
        <title>
          Language
        </title>
      </svg>
      <span>
        <span
          class="MuiBox-root css-0"
          data-testid="available-languages-names-ca1f70b2-a487-4d07-b49d-22ce6e282759"
        >
          English
        </span>
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-mebn01"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-14w93u9-MuiButtonBase-root-MuiButton-root"
      data-testid="explore-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      tabindex="0"
      type="button"
    >
      Explore
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-10gmsyr-MuiButtonBase-root-MuiButton-root"
      data-testid="api-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="CodeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.4 16.6 4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0 4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
          />
        </svg>
      </span>
      API
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <a
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-10gmsyr-MuiButtonBase-root-MuiButton-root"
      data-testid="csv-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      download="model-1.csv.zip"
      href="https://download.example.com/model-1.csv.zip"
      tabindex="0"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="FileDownloadIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
          />
        </svg>
      </span>
      CSV
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-10gmsyr-MuiButtonBase-root-MuiButton-root"
      data-testid="show-details-button-5cd41ff1-8fee-4d31-b47e-3b8ab8ce4d33"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="DescriptionOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 16h8v2H8zm0-4h8v2H8zm6-10H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </span>
      Details
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
